# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
src/: camera.cpp  camera.h  main.cpp  viewport.h
